# netbox

./: pyproject.toml
netbox/netbox/: settings.py
netbox/translations/en/LC_MESSAGES/: django.po
