# See PEP 518 for the spec of this file
# https://www.python.org/dev/peps/pep-0518/
[tool.setuptools.packages.find]
include = ["netbox"]

[project]
name = "netbox"
dynamic = ["dependencies"]
version = "4.0.7"

[tool.black]
line-length = 120
target_version = ['py310', 'py311', 'py312']
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.pylint]
max-line-length = 120

[tool.pyright]
include = ["netbox"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
]
reportMissingImports = true
reportMissingTypeStubs = false
